<resources>
    <string name="app_name">MovieBrowser</string>

    <!--Entry-->
    <string name="entry_now_playing">現正熱映</string>
    <string name="entry_upcoming">即將上映</string>
    <string name="entry_search">搜尋</string>

    <!--Now Playing-->
    <string name="now_playing_title">現正熱映</string>

    <!--Upcoming-->
    <string name="upcoming_title">即將上映</string>
    <string name="upcoming_date">上映日期：%s</string>

    <!--Search-->
    <string name="search_title">找電影</string>
    <string name="search_hint">想找什麼電影？</string>
    <string name="search_or">或</string>
    <string name="search_genre">電影類型</string>
    <string name="search_sort">排序依照</string>
    <string name="search_button_search">搜尋</string>

    <!--Discover-->
    <string name="discover_title">搜尋結果</string>

    <!--Movie-->
    <string name="movie_overview">劇情大綱</string>
    <string name="movie_vote_prefix">平均評分：%.1f</string>
    <string name="movie_release_date_prefix">上映日期：%s</string>
    <string name="movie_genre_prefix">類型：</string>
    <string name="movie_null">無</string>
    <string name="movie_adult">限制級：是</string>
    <string name="movie_not_adult">限制級：否</string>
    <string name="movie_search_on_youtube">Youtube 搜尋</string>

    <!--Custom Button-->
    <string name="custom_button_default_text">確認</string>
</resources>
