<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <com.kevingt.moviebrowser.custom.CustomButton
            android:id="@+id/btn_entry_now_playing"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="50dp"
            app:buttonText="@string/entry_now_playing"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_entry_upcoming"/>

    <com.kevingt.moviebrowser.custom.CustomButton
            android:id="@+id/btn_entry_upcoming"
            android:layout_width="0dp"
            android:layout_height="80dp"
            app:buttonText="@string/entry_upcoming"
            app:layout_constraintTop_toBottomOf="@id/btn_entry_now_playing"
            app:layout_constraintBottom_toTopOf="@id/btn_entry_search"
            app:layout_constraintStart_toStartOf="@id/btn_entry_now_playing"
            app:layout_constraintEnd_toEndOf="@id/btn_entry_now_playing"/>

    <com.kevingt.moviebrowser.custom.CustomButton
            android:id="@+id/btn_entry_search"
            android:layout_width="0dp"
            android:layout_height="80dp"
            app:buttonText="@string/entry_search"
            android:layout_marginBottom="50dp"
            app:layout_constraintTop_toBottomOf="@id/btn_entry_upcoming"
            app:layout_constraintStart_toStartOf="@id/btn_entry_now_playing"
            app:layout_constraintEnd_toEndOf="@id/btn_entry_now_playing"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>