<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/search_page_margin"
            android:imeOptions="actionSearch"
            android:background="@drawable/bg_search_view"
            app:queryHint="@string/search_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/tv_search_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_or"
            android:textColor="@color/wordingLight"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_search"/>

    <View android:layout_width="0dp"
          android:layout_height="1dp"
          android:background="@color/wordingLight"
          android:layout_margin="@dimen/search_page_margin"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toStartOf="@id/tv_search_or"
          app:layout_constraintTop_toTopOf="@id/tv_search_or"
          app:layout_constraintBottom_toBottomOf="@id/tv_search_or"/>

    <View android:layout_width="0dp"
          android:layout_height="1dp"
          android:background="@color/wordingLight"
          android:layout_margin="@dimen/search_page_margin"
          app:layout_constraintStart_toEndOf="@id/tv_search_or"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@id/tv_search_or"
          app:layout_constraintBottom_toBottomOf="@id/tv_search_or"/>

    <TextView
            android:id="@+id/tv_search_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_genre"
            style="@style/TitleText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/grv_search_genre"
            app:layout_constraintTop_toBottomOf="@id/tv_search_or"/>

    <com.kevingt.moviebrowser.custom.GridSelectionRecyclerView
            android:id="@+id/grv_search_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/search_selection_margin"
            android:layout_marginEnd="@dimen/search_selection_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_search_sort"
            app:layout_constraintTop_toBottomOf="@id/tv_search_genre"/>

    <TextView
            android:id="@+id/tv_search_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_sort"
            style="@style/TitleText"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/grv_search_genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/grv_search_sort"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.kevingt.moviebrowser.custom.GridSelectionRecyclerView
            android:id="@+id/grv_search_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/search_selection_margin"
            android:layout_marginEnd="@dimen/search_selection_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_search"
            app:layout_constraintTop_toBottomOf="@id/tv_search_sort"/>

    <com.kevingt.moviebrowser.custom.CustomButton
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/search_button_search"
            android:layout_margin="@dimen/search_page_margin"
            app:buttonText="@string/search_button_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf=" parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>